<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9FF"
    >

    <TextView
        android:id="@+id/textview_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/auth_logo_signin"
        android:textColor="@color/black_custom"
        android:textSize="26dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/form_input"
            android:ems="10"
            android:fontFamily="@font/montserrat_thin"
            android:gravity="center"
            android:hint="@string/auth_first_name"
            android:inputType="textPersonName"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textColor="@color/black_custom"
            android:textColorHint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_sign_in"
            app:layout_constraintVertical_bias="0.19999999"/>




        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/form_input"
            android:ems="10"
            android:fontFamily="@font/montserrat_thin"
            android:gravity="center"
            android:hint="@string/auth_last_name"
            android:inputType="textPersonName"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textColor="@color/black_custom"
            android:textColorHint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_sign_in"
            app:layout_constraintVertical_bias="0.3" />




        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/form_input"
            android:ems="10"
            android:fontFamily="@font/montserrat_thin"
            android:gravity="center"
            android:hint="@string/auth_email"
            android:inputType="textPersonName"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textColor="@color/black_custom"
            android:textColorHint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_sign_in"
            app:layout_constraintVertical_bias="0.40000000"/>

    <LinearLayout
        android:layout_width="204dp"
        android:layout_height="24dp"
        android:orientation="horizontal"
        android:fontFamily="@font/montserrat_thin"
        app:layout_constraintBottom_toTopOf="@+id/button_signin"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.01999998">

        <TextView
            android:id="@+id/textView_alreadv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_thin"
            android:rotationX="25"
            android:text="@string/auth_already"
            android:textColor="@color/gray"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_thin"
            android:text="@string/auth_login_link"
            android:textColor="#4E55D7"
            android:textSize="10sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_sign_in"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/auth_logo_signin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textview_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/auth_sign_google"
        android:textColor="@color/black_custom"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signin"
        app:layout_constraintVertical_bias="0.32999998" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textview_google"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signin"
        app:layout_constraintVertical_bias="0.31"
        app:srcCompat="@drawable/logo_gogle" />

    <TextView
        android:id="@+id/textview_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/auth_sign_apple"
        android:textColor="@color/black_custom"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_google"
        app:layout_constraintVertical_bias="0.31" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textview_apply"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.22000003"
        app:srcCompat="@drawable/apply_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>